# cpp-sample-project

./: .gitignore  CMakeLists.txt  README.md
include/: utils.h
src/: main.cpp  utils.cpp
tests/: CMakeLists.txt  test_utils.cpp
